fixed center align issue of alumni-msg

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1082,16 +1082,28 @@ table a, #comments a {
 }
 /* ---------------------------------------------Alunmi---------------------------------------- */
 .alumni {
-  /* position: relative; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.alumni-name {
+  display: none;
+}
 .alumni-msg {
   text-align: justify;
   text-transform: none;
-
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal
+}
+@media screen and (max-width:900px) {
+  .alumni-name {
+    display: block;
+  }
+  .alumni {
+    display: block;
+  }
+  .alumni-name-on-large-screen {
+    display: none;
+  }
 }
 /* ------------------------------------------------------------------------------------------------------------ */
 
